--- a/facebook.html
+++ b/facebook.html
@@ -18,7 +18,7 @@ any other head content must come *after* these tags -->
 
 <body>
     <!-- Our Facebook layout will go here. -->
-    <nav class="navbar navbar-default">NAVBAR</nav>
+    <nav class="navbar navbar-default navbar-fixed-top">NAVBAR</nav>
     <!-- The container for our grid. The outermost grid must be placed within
 
 a `container` or `container-fluid` class. (Meaning: If you nest a grid
@@ -38,6 +38,8 @@ good answer here: http://stackoverflow.com/a/22263969 -->
             <!-- Main feed: A cell that spans 7 columns -->
             <div class="col-md-7">
                 Main Feed
+                <div style="height: 99999px;">
+                </div>
             </div>
             <!-- Right sidebar: A cell that spans 3 columns -->
             <div class="col-md-3">
