--- a/facebook.html
+++ b/facebook.html
@@ -18,7 +18,7 @@ any other head content must come *after* these tags -->
 
 <body>
     <!-- Our Facebook layout will go here. -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -58,15 +58,15 @@ any other head content must come *after* these tags -->
                             </button>
                         </div>
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
                                 <span class="glyphicon glyphicon-user"></span>
                                 <span class="badge">5</span>
                             </button>
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
                                 <span class="glyphicon glyphicon-comment"></span>
                                 <span class="badge">1</span>
                             </button>
-                            <button type="button" class="btn btn-default navbar-btn">
+                            <button type="button" class="btn btn-default navbar-btn fb-notifications">
                                 <span class="glyphicon glyphicon-globe"></span>
                                 <span class="badge">3</span>
                             </button>
@@ -102,7 +102,7 @@ good answer here: http://stackoverflow.com/a/22263969 -->
         <!-- The row that contains the three main columns of the website. -->
         <div class="row">
             <!-- Left sidebar: A cell that spans 2 columns -->
-            <div class="col-md-2">
+            <div class="col-md-2 fb-left-sidebar">
                 <ul class="nav nav-pills nav-stacked">
                     <li role="presentation"><a href="#">John Vilk</a></li>
                     <li role="presentation">
@@ -124,11 +124,11 @@ good answer here: http://stackoverflow.com/a/22263969 -->
                     <li role="presentation">
                         <a href="#">
                             <span class="glyphicon glyphicon-comment"></span> Messages
-                            <span class="badge">7</span>
+                            <span class="badge pull-right">7</span>
                         </a>
                     </li>
                     <li role="presentation">
-                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>
+                        <a href="#"><span class="glyphicon glyphicon-calendar"></span>  
 
                                 Events</a>
                     </li>
@@ -146,7 +146,7 @@ good answer here: http://stackoverflow.com/a/22263969 -->
                     <li role="presentation">
                         <a href="#">
                             <span class="glyphicon glyphicon-bookmark"></span> Saved
-                            <span class="badge">2</span>
+                            <span class="badge pull-right">2</span>
                         </a>
                     </li>
                     <li role="presentation">
@@ -344,7 +344,7 @@ enter more than 2 rows of text. -->
                 </div>
             </div>
             <!-- Right sidebar: A cell that spans 3 columns -->
-            <div class="col-md-3">
+            <div class="col-md-3 fb-right-sidebar">
                 <!-- Nested grid! Like the outer grid, it's just a sequence of rows. -->
                 <!-- Ticker. -->
                 <div class="row">
