--- a/twitter.html
+++ b/twitter.html
@@ -52,13 +52,14 @@ any other head content must come *after* these tags -->
                     </div>
                 </div>
                 <form class="nav navbar-form navbar-left" role="search">
-                    <div class="input-group">
+                    <div class="form-group has-feedback">
                         <input type="text" class="form-control" placeholder="Search Twitter">
-                        <span class="input-group-btn">
-            			<button type="submit" class="btn btn-default">
+                        <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                        <!-- <span class="input-group-btn">
+            			<button type="submit" class="btn btn-default twitterbtn">
             				<span class="glyphicon glyphicon-search"></span>
-                        </button>
-                        </span>
+                        </button> -->
+                        <!-- </span> -->
                     </div>
                 </form>
                 <div class="nav navbar-nav navbar-right">
